# numeric

./: .gitignore  CHANGELOG.md  CNAME  CONTRIBUTORS.md  Cargo.toml  LICENSE  README.md  TODO.md  changelog.md  index.html
benches/: macros.rs
doc/: search-index.js
doc/implementors/numeric/: trait.Numeric.js
doc/numeric/: index.html  macro.tensor!.html  sidebar-items.js  stability.html  stability.json  trait.Numeric.html  trait.TensorType.html
doc/numeric/io/: fn.load_hdf5_as_f32.html  fn.load_hdf5_as_f64.html  fn.load_hdf5_as_i16.html  fn.load_hdf5_as_i32.html  fn.load_hdf5_as_i64.html  fn.load_hdf5_as_i8.html  fn.load_hdf5_as_isize.html  fn.load_hdf5_as_u16.html  fn.load_hdf5_as_u32.html  fn.load_hdf5_as_u64.html  fn.load_hdf5_as_u8.html  fn.load_hdf5_as_usize.html  index.html  sidebar-items.js
src/: lib.rs  macros.rs  tensor.rs  traits.rs
src/io/: mod.rs
src/linalg/: mod.rs  solve.rs  svd.rs
src/math/: mod.rs
src/random/: mod.rs
src/tensor/: add_floats.rs  binary.rs  concat.rs  convert.rs  core.rs  display.rs  display_floats.rs  div_floats.rs  dot.rs  dot_floats.rs  eq.rs  f64_add.rs  f64_display.rs  f64_div.rs  f64_dot.rs  f64_mul.rs  f64_sub.rs  generic_add.rs  generic_div.rs  generic_mul.rs  generic_sub.rs  generics.rs  indexing.rs  macros.rs  mod.rs  mul_floats.rs  sub_floats.rs  summary.rs
src/tests/: add.rs  advanced_indexing.rs  creation.rs  div.rs  dot.rs  indexing.rs  io.rs  mod.rs  mul.rs  slice.rs  sub.rs  summary.rs  test_tensor.rs  test_tensor_add.rs  test_tensor_div.rs  test_tensor_dot.rs  test_tensor_indexing.rs  test_tensor_mul.rs  test_tensor_slice.rs  test_tensor_sub.rs
tests/: add.rs  advanced_indexing.rs  creation.rs  div.rs  dot.rs  indexing.rs  io.rs  lib.rs  linalg.rs  macros.rs  mul.rs  sub.rs  summary.rs
(+122 files in other folders)
