[package]
name = "numeric"
version = "0.0.7"
authors = ["Gustav Larsson <gustav.m.larsson@gmail.com>"]
description = "N-dimensional matrix class for Rust"
repository = "https://github.com/gustavla/numeric"
homepage = "http://numeric.rs"
documentation = "http://numeric.rs/doc/numeric/index.html"
readme = "README.md"
keywords = ["numeric", "tensor", "matrix", "vector", "scientific"]
license = "MIT"

[dependencies]
blas = "0.7.0"
lapack = "0.4.0"
num = "0.1.25"
rand = "0.3.8"
libc = "0.2.4"
hdf5-sys = "0.3.0"
