[package]
name = "numeric"
version = "0.1.4"
authors = ["Gustav Larsson <gustav.m.larsson@gmail.com>"]
description = "N-dimensional matrix class for Rust"
repository = "https://github.com/numeric-rust/numeric"
homepage = "http://numeric.rs"
documentation = "http://numeric.rs/doc/numeric/index.html"
readme = "README.md"
keywords = ["numeric", "tensor", "matrix", "vector", "hdf5"]
license = "MIT"

[dependencies]
blas = "0.9.1"
lapack = "0.8.1"
num = "0.1.29"
rand = "0.3.12"
libc = "0.2.4"
hdf5-sys = "0.3.2"

[[test]]
name = "numeric"
path = "tests/lib.rs"
