[package]
name = "numeric"
version = "0.2.0"
authors = ["Gustav Larsson <gustav.m.larsson@gmail.com>"]
description = "N-dimensional matrix class for Rust"
repository = "https://github.com/numeric-rust/numeric"
homepage = "http://numeric.rs"
documentation = "http://numeric.rs/doc/numeric/index.html"
readme = "README.md"
keywords = ["numeric", "tensor", "matrix", "vector", "hdf5"]
license = "MIT"

[dependencies]
blas = "0.22.0"
lapack = "0.19.0"
num = "0.4.0"
rand = "0.8.3"
libc = "0.2.94"
hdf5-sys = "0.7.1"

[[test]]
name = "numeric"
path = "tests/lib.rs"
